<resources>
    <string name="app_name">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="night">Night</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="toMainActivity">To Main Activity</string>
    <string name="searchCity">Search City</string>
    <string name="save">Save</string>
    <string name="wind_speedBox">Hide wind speed</string>
    <string name="pressureBox">Hide pressure</string>
    <string name="city">City</string>
    <string name="info_city">Info city</string>
    <string name="icon_about">Icon about</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cloudy_times" translatable="false" />
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>

    <string-array name="date">
        <item>date</item>
        <item>date</item>
        <item>date</item>
    </string-array>

    <string name="sensor">Sensor</string>
    <string name="communicate">Communicate</string>
    <string name="map">Map</string>
    <string name="push_message">Push Message</string>
    <string name="connectivity_change">Connectivity Change</string>
    <string name="сonnection_restored">Connection restored</string>
    <string name="cellular_network">Cellular network</string>
    <string name="wifi_network">WiFi network</string>
    <string name="no_network">No network</string>
    <string name="low_charge">Low charge</string>
    <string name="сonnect_charger">Connect the charger</string>
    <string name="today">Today</string>

</resources>