<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_baseline_new_releases_24"
            android:title="@string/search" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/tornado"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/thunder"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
