<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MySettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/toMainActivity"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:contentDescription="@string/toMainActivity"
                android:onClick="toMainActivity"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>

            <Switch
                android:id="@+id/nightActivity"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/night"
                android:onClick="nightActivity" />

            <CheckBox
                android:id="@+id/windSpeed"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/wind_speed"
                android:onClick="windSpeed"/>

            <CheckBox
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/pressure"
                android:onClick="pressure"/>

            <Button
                android:id="@+id/saveSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveOnClick"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>