<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.MySettingFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <Switch
            android:id="@+id/nightActivityFragment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/night" />

        <CheckBox
            android:id="@+id/windSpeedFragmentSetting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/wind_speedBox" />

        <CheckBox
            android:id="@+id/pressureFragmentSetting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/pressureBox" />

        <Button
            android:id="@+id/saveSettingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</FrameLayout>